Add schema property
